<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.example.trevonharvey.nutritioninformation.NutritionInfoActivity"
    tools:showIn="@layout/activity_nutrition_info">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/per100g"
        android:id="@+id/gramTextView"
        android:layout_alignBaseline="@+id/nCaloriesTextView"
        android:layout_alignBottom="@+id/nCaloriesTextView"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:id="@+id/nameTextView"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/calories"
        android:id="@+id/nCaloriesTextView"
        android:layout_below="@+id/nameTextView"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="28dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/caloriesTextView"
        android:layout_alignBottom="@+id/nCaloriesTextView"
        android:layout_toRightOf="@+id/textView"
        android:layout_toEndOf="@+id/textView" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/macronutrientsLabel"
        android:id="@+id/textView"
        android:layout_marginTop="23dp"
        android:layout_below="@+id/nCaloriesTextView"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:textStyle="bold" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/micronutrientsLabel"
        android:id="@+id/textView6"
        android:layout_above="@+id/textView7"
        android:layout_alignRight="@+id/sodiumTextView"
        android:layout_alignEnd="@+id/sodiumTextView"
        android:layout_marginRight="30dp"
        android:layout_marginEnd="30dp"
        android:textStyle="bold" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/fat"
        android:id="@+id/textView7"
        android:layout_below="@+id/textView"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="26dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/protein"
        android:id="@+id/textView8"
        android:layout_marginTop="25dp"
        android:layout_below="@+id/textView7"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/carbs"
        android:id="@+id/textView9"
        android:layout_below="@+id/textView8"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="23dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/fatTextView"
        android:layout_alignTop="@+id/textView7"
        android:layout_toRightOf="@+id/nCaloriesTextView"
        android:layout_toEndOf="@+id/nCaloriesTextView"
        android:layout_marginLeft="26dp"
        android:layout_marginStart="26dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/proteinTextView"
        android:layout_above="@+id/textView9"
        android:layout_alignLeft="@+id/fatTextView"
        android:layout_alignStart="@+id/fatTextView" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/carbTextView"
        android:layout_alignBottom="@+id/textView9"
        android:layout_alignLeft="@+id/proteinTextView"
        android:layout_alignStart="@+id/proteinTextView" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sodium"
        android:id="@+id/textView13"
        android:layout_alignTop="@+id/fatTextView"
        android:layout_alignLeft="@+id/textView6"
        android:layout_alignStart="@+id/textView6" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/fiber"
        android:id="@+id/textView14"
        android:layout_alignTop="@+id/proteinTextView"
        android:layout_alignLeft="@+id/textView13"
        android:layout_alignStart="@+id/textView13" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/potassium"
        android:id="@+id/textView15"
        android:layout_alignTop="@+id/carbTextView"
        android:layout_alignLeft="@+id/textView14"
        android:layout_alignStart="@+id/textView14" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/sodiumTextView"
        android:layout_alignTop="@+id/textView13"
        android:layout_alignRight="@+id/gramTextView"
        android:layout_alignEnd="@+id/gramTextView" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/fiberTextView"
        android:layout_alignTop="@+id/textView14"
        android:layout_alignLeft="@+id/sodiumTextView"
        android:layout_alignStart="@+id/sodiumTextView" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/potassiumTextView"
        android:layout_alignTop="@+id/textView15"
        android:layout_alignLeft="@+id/fiberTextView"
        android:layout_alignStart="@+id/fiberTextView" />

    <ProgressBar
        style="?android:attr/progressBarStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/progressBar"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="62dp"
        android:max="100"
        android:progress="0"
        android:indeterminate="false" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sugar"
        android:id="@+id/textView2"
        android:layout_below="@+id/textView9"
        android:layout_toRightOf="@+id/textView9"
        android:layout_toEndOf="@+id/textView9"
        android:layout_marginTop="61dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/sugarTextView"
        android:layout_alignTop="@+id/textView2"
        android:layout_toLeftOf="@+id/progressBar"
        android:layout_toStartOf="@+id/progressBar" />

</RelativeLayout>
